kubernetes/auth-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: auth-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auth-service

  template:
    metadata:
      labels:
        app: auth-service

    spec:
      imagePullSecrets:
        - name: gitlab-registry

      containers:
        - name: auth-service
          image: registry.gitlab.com/unrulybarb/veleda/auth-service:b75b7e8b
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
